# BallBalancePlatform

./: .gitmodules  BallBalancePlatform.code-workspace  README.md
.github/workflows/: auto-update-esp32-submodule.yml
esp32/: CMakeLists.txt  camera_viewer.py  esp32.code-workspace
esp32/.git_repo_backup/: index
esp32/.git_repo_backup/gk/: config
esp32/main/: CMakeLists.txt  idf_component.yml  main.c
esp32/main/drivers/: drv_install.c  drv_uart.c  drv_uart.h  my_ov7670.c  my_ov7670.h  tft.c  tft.h  typedef.h
esp32/main/task/: cam_task.c  communicate_task.c  lcd_task.c  shell_task.c
stm32_rtthread/: .clangd  .config  .cproject  .gitignore  .project  ARM_INSTRUCTION_SET.md  Kconfig  compile_flags.txt  debug_log.txt  rtconfig.h  rtconfig.py
stm32_rtthread/.git_repo_backup/: FETCH_HEAD  config  index
stm32_rtthread/_threads/: communicate_thread.c  keypad_thread.c  mpu_thread.c  oled_thread.c  servo_thread.c  线程.txt
stm32_rtthread/applications/: drv_uart.c  drv_uart.h  encoder.c  encoder.h  kalman.c  kalman.h  keypad.c  keypad.h  main.c  max7219.c  mpu6050.c  mpu6050.h  mylib.c  mylib.h  oled.c  oled.h  oled_data.c  oled_data.h  ring_buff.c  ring_buff.h  servo.c  servo.h  shared_drive_init.c  shared_drive_init.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c
stm32_rtthread/drivers/: board.c  board.h  drv_clk.c  drv_common.c  drv_usart.c  stm32f1xx_hal_conf.h
stm32_rtthread/tools/: data_analyze.py  list_program_files.ps1  plotter.py  print_size.ps1  print_size.py  run_analyze.bat  run_monitor.bat  run_print_size.bat  serial_monitor.py
(+13 files in other folders)
